--- a/React-Fundamentals/React-Components/Project-My-Components/my-components-with-nextjs/package.json
+++ b/React-Fundamentals/React-Components/Project-My-Components/my-components-with-nextjs/package.json
@@ -15,5 +15,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2"
   }
 }
