--- a/Building-React-Components-with-Next.js/website-with-next.js/package.json
+++ b/Building-React-Components-with-Next.js/website-with-next.js/package.json
@@ -15,5 +15,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2"
   }
 }
