--- a/Building-React-Components-with-Next.js/react-components-with-next.js/package.json
+++ b/Building-React-Components-with-Next.js/react-components-with-next.js/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "^13.5.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.11.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
