--- a/Building-React-Components-with-Next.js/website-with-next.js/package.json
+++ b/Building-React-Components-with-Next.js/website-with-next.js/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
